--- a/app/www/index.html
+++ b/app/www/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <title>Where da bus?</title>
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+
+    <title>HackVictoria</title>
 
     <!-- Sets initial viewport load and disables zooming  -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -26,13 +28,9 @@
 
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
-      <button class="btn pull-left">
-        Left
-      </button>
-      <button class="btn pull-right">
-        Right
-      </button>
-      <h1 class="title">HackVictoria</h1>
+      <a class="icon icon-left-nav pull-left"></a>
+      <h1 class="title">HackVictoria</h1> 
+      <a class="icon ion-android-bus"></a>
     </header>
 
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
@@ -41,6 +39,6 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=app.initMap" async defer></script>
   </body>
 </html>
