--- a/app/www/index.html
+++ b/app/www/index.html
@@ -28,9 +28,9 @@
 
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
-      <a class="icon icon-left-nav pull-left"></a>
+      <a class="icon left ion-ios-list-outline"></a>
       <h1 class="title">HackVictoria</h1> 
-      <a class="icon ion-android-bus"></a>
+      <a class="icon right ion-android-bus"></a>
     </header>
 
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
