--- a/app/www/index.html
+++ b/app/www/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 
-    <title>HackVictoria</title>
+    <title>OpenBus</title>
 
     <!-- Sets initial viewport load and disables zooming  -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -29,7 +29,7 @@
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
       <a class="icon left ion-ios-list-outline"></a>
-      <h1 class="title">HackVictoria</h1> 
+      <h1 class="title">OpenBus</h1> 
       <a class="icon right ion-android-bus"></a>
     </header>
 
