--- a/app/www/index.html
+++ b/app/www/index.html
@@ -37,6 +37,7 @@
     <div class="content">
       <div id="map"></div>
     </div>
+    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?callback=app.initMap" async defer></script>
