--- a/app/platforms/browser/www/index.html
+++ b/app/platforms/browser/www/index.html
@@ -36,7 +36,7 @@
     <div class="content">
       <div id="map"></div>
     </div>
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="js/socket.io-1.4.5.js></script>
     <script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
