Got websockets working between the client and server

--- a/app/platforms/browser/www/index.html
+++ b/app/platforms/browser/www/index.html
@@ -23,8 +23,8 @@
     <!-- Include the compiled Ratchet JS -->
     <script src="js/ratchet.js"></script>
   </head>
-  <body>
 
+  <body>
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
       <a href="list.html" data-transition="slide-out" class="icon left ion-ios-list-outline"></a>
@@ -32,14 +32,14 @@
       <a class="icon right ion-android-bus"></a>
     </header>
 
-    <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
+    <!-- Wrap all non-bar HTML in the .content div -->
     <div class="content">
       <div id="map"></div>
     </div>
-    <script src="js/socket.io-1.4.5.js></script>
+    <script src="js/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=app.initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js" async defer></script>
   </body>
 </html>
