--- a/app/www/index.html
+++ b/app/www/index.html
@@ -41,5 +41,13 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js" async defer></script>
+    <script>
+      window.addEventListener('push', function() {
+        var scriptsList = document.querySelectorAll('script');
+        for (var i = 0; i < scriptsList.length; i++) {
+          eval(scriptsList[i].innerHTML);
+        }
+      });
+    </script>
   </body>
 </html>
