--- a/app/www/list.html
+++ b/app/www/list.html
@@ -27,8 +27,8 @@
 
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
-      <a href="index.html" data-ignore="push" id="back-button" class="icon left ion-android-arrow-back"></a>
-      <h1 class="title">View a bus</h1> 
+      <a href="index.html" data-transition="slide-in" id="back-button" class="icon left ion-android-arrow-back"></a>
+      <h1 class="title">View a bus</h1>
       <a class="icon right ion-android-bus"></a>
     </header>
 
