--- a/app/www/onbus.html
+++ b/app/www/onbus.html
@@ -27,7 +27,7 @@
 
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
-      <a href="index.html" data-ignore="push" id="back-button" class="icon left ion-android-arrow-back"></a>
+      <a href="index.html" data-transition="slide-out" id="back-button" class="icon left ion-android-arrow-back"></a>
       <h1 class="title">What bus are you on?</h1>
     </header>
 
@@ -44,11 +44,5 @@
     <script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script>
-      // $(document).ready(function() {
-      //   console.log("on bus loaded");
-      //   setTimeout(function() {app.populateBusList(busList);}, 200);
-      // });
-    </script>
   </body>
 </html>
