--- a/app/platforms/android/assets/www/list.html
+++ b/app/platforms/android/assets/www/list.html
@@ -28,7 +28,7 @@
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
       <a href="index.html" data-transition="slide-in" id="back-button" class="icon left ion-android-arrow-back"></a>
-      <h1 class="title">All Busses</h1> 
+      <h1 class="title">View a bus</h1>
       <a class="icon right ion-android-bus"></a>
     </header>
 
@@ -36,9 +36,6 @@
     <div class="content">
       <div class="card">
         <ul class="table-view">
-          <li class="table-view-cell">Bus 1</li>
-          <li class="table-view-cell">Bus 2</li>
-          <li class="table-view-cell">Bus 3</li>
         </ul>
       </div>
     </div>
