--- a/app/platforms/android/assets/www/onbus.html
+++ b/app/platforms/android/assets/www/onbus.html
@@ -27,32 +27,22 @@
 
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
-      <a href="list.html" data-transition="slide-out" class="icon left ion-ios-list-outline"></a>
-      <h1 class="title">OpenBus</h1>
-      <a href="onbus.html" data-transition="slide-in" class="icon right ion-android-bus"></a>
+      <a href="index.html" data-transition="slide-out" id="back-button" class="icon left ion-android-arrow-back"></a>
+      <h1 class="title">What bus are you on?</h1>
     </header>
 
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
     <div class="content">
-      <div id="map"></div>
+      <div class="card">
+        <ul class="table-view">
+        </ul>
+      </div>
       <script>
-        setTimeout(function() {console.log("something"); initMap();}, 200);
+        app.populateBusList(busList);
       </script>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js" async defer></script>
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-
-    <script>
-      window.addEventListener('push', function() {
-        var scriptsList = document.querySelectorAll('script');
-        for (var i = 0; i < scriptsList.length; i++) {
-          eval(scriptsList[i].innerHTML);
-        }
-      });
-    </script>
-
   </body>
 </html>
