Update bus selection

--- a/app/platforms/android/assets/www/onbus.html
+++ b/app/platforms/android/assets/www/onbus.html
@@ -44,5 +44,13 @@
     <script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script>
+      window.addEventListener('push', function() {
+        var scriptsList = document.querySelectorAll('script');
+        for (var i = 0; i < scriptsList.length; i++) {
+          eval(scriptsList[i].innerHTML);
+        }
+      });
+    </script>
   </body>
 </html>
