--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -36,15 +36,18 @@
     <div class="content">
       <div id="map"></div>
       <script>
-        setTimeout(function() {console.log("something"); initMap();}, 200);
+        setTimeout(function() {
+          initMap();
+          app.postLoop();
+        }, 200);
       </script>
     </div>
+    
     <script src="https://maps.googleapis.com/maps/api/js" async defer></script>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-
     <script>
       window.addEventListener('push', function() {
         var scriptsList = document.querySelectorAll('script');
@@ -53,6 +56,5 @@
         }
       });
     </script>
-
   </body>
 </html>
