--- a/app/www/onbus.html
+++ b/app/www/onbus.html
@@ -41,8 +41,17 @@
         app.populateBusList(busList);
       </script>
     </div>
+    
     <script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script>
+      // window.addEventListener('push', function() {
+      //   var scriptsList = document.querySelectorAll('script');
+      //   for (var i = 0; i < scriptsList.length; i++) {
+      //     eval(scriptsList[i].innerHTML);
+      //   }
+      // });
+    </script>
   </body>
 </html>
